Hooked up backend shell to frontend finally 🎉🎊🎉 TODO/FIXES NEEDED: - sout print buffer to be redirected to ExecutionResult - Ignore non-printable statements - Fixing multiline code execution in engine - Actually dumping outputs to NotebookCell.java - Fixing scanner if possible